static/styles/zulip.scss
/* ... */
.stream_label::before {
    left: 100%;
    top: 50%;
    content: " ";
    height: 0px;
    width: 0px;
    position: absolute;
    pointer-events: none;
    margin-top: -14px;
    border-style: solid;
    border-width: 14px 0 14px 6px;
    border-color: hsla(0, 0%, 0%, 0.0) hsla(0, 0%, 0%, 0.0) hsla(0, 0%, 0%, 0.0) transparent;
    z-index: 1;
    -moz-transform: scale(.9999);
}

.stream_topic {
    display: inline-block;
    padding: 3px 3px 2px 12px;
    margin-left: -5px;
    height: 17px;
    line-height: 17px;
}

.recipient_row_date {
    position: absolute;
    right: 0;
    top: 0;

    color: hsl(0, 0%, 53%);
    font-size: 12px;
    font-weight: 600;
    padding: 3px 11px 2px 10px;
    height: 17px;
    line-height: 17px;
}

.recipient_row_date.hide-date {
    display: none;
}

.floating_recipient .recipient_row_date.hide-date {
    display: block;
}

.summary_row .message_header {
    padding: 5px 0px 4px 5px;
}

.summary_row .message_header {
    border-radius: 0;
}

.bookend_tr + .summary_row .message_header {
    border-top-right-radius: 3px;
}

.bookend_tr + .summary_row .summary_colorblock {
    border-top-left-radius: 3px;
}

.summary_row.last_message .message_header {
    border-bottom-right-radius: 3px;
    box-shadow:
        inset 0px 2px 1px -2px hsl(0, 0%, 20%),
        inset -2px 0px 1px -2px hsl(0, 0%, 20%),
        inset 0px -2px 1px -2px hsl(0, 0%, 20%);
}

.summary_row.last_message .summary_colorblock {
    border-bottom-left-radius: 3px;
}

.copy-paste-text {
    /* Hide the text that we want copy paste to capture */
    position: absolute;
    text-indent: -99999px;
    float: left;
    width: 0px;
}

.summary_row_private_message .summary_colorblock {
    background-color: hsl(0, 0%, 0%);
}

.messages-expand,
.messages-collapse {
    cursor: pointer;
}

/*
   We can't collapse the floating recipient bar yet, so this is
   just a temporary hack.
*/
.floating_recipient .messages-collapse {
    display: none;
}

.message_failed .rotating {
    display: inline-block;

    -webkit-animation: rotate 1s infinite linear;
    -moz-animation: rotate 1s infinite linear;
    -ms-animation: rotate 1s infinite linear;
    -o-animation: rotate 1s infinite linear;
    animation: rotate 1s infinite linear;
}

@-webkit-keyframes rotate {
    from {
        -webkit-transform: rotate(0deg);
    }

    to {
        -webkit-transform: rotate(359deg);
    }
}

@-moz-keyframes rotate {
    from {
        -moz-transform: rotate(0deg);
    }

    to {
        -moz-transform: rotate(359deg);
    }
}

@-ms-keyframes rotate {
    from {
        -ms-transform: rotate(0deg);
    }

    to {
        -ms-transform: rotate(359deg);
    }
}

@-moz-keyframes rotate {
    from {
        -o-transform: rotate(0deg);
    }

    to {
        -o-transform: rotate(359deg);
    }
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(359deg);
    }
}

@-webkit-keyframes fadeInMessage {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@-moz-keyframes fadeInMessage {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes fadeInMessage {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@-webkit-keyframes fadeInEditNotice {
    0% {
        transform: translateX(-10px);
    }

    100% {
        transform: translateX(0px);
    }
}

@-moz-keyframes fadeInEditNotice {
    0% {
        transform: translateX(-10px);
    }

    100% {
        transform: translateX(0px);
    }
}

@keyframes fadeInEditNotice {
    0% {
        transform: translateX(-10px);
    }

    100% {
        transform: translateX(0px);
    }
}

.floating_recipient .message_header_private_message {
    border-bottom: 0px;
    border-left: 0px;
}

.message_header_private_message .message_label_clickable {
    background-color: hsl(0, 0%, 27%);
    display: inline-block;
    padding: 3px 6px 2px 6px;
    font-weight: normal;
    font-size: 14px;
    height: 17px;
    line-height: 17px;
    border-left-color: hsl(0, 0%, 27%);
}

/* Base color backgrounds for messageboxes,
   private messages, mentions, and unread messages */

.messagebox {
    position: relative;
}

.private-message .messagebox,
.private-message .date_row,
.message_header_private_message .message-header-contents {
    background-color: hsla(192, 19%, 75%, 0.2);
    box-shadow: inset 1px 1px 0px hsl(0, 0%, 88%);
}

.message-header-contents {
    border-right: 1px solid hsl(0, 0%, 88%);
}

.mention .messagebox {
    background-color: hsl(8, 94%, 94%);
}

.messagebox .message_top_line {
    position: relative;
}

.recipient_row .message_row:first-child .unread_marker {
    top: 0px;
}

.unread_marker {
    display: block;
    position: absolute;
    left: 2px;
    top: 0px;
    padding-bottom: 2px;
    opacity: 0;
    z-index: 1;
    height: 100%;
    @include prefixed-transition(all, 0.3s, ease-out);
}

.unread-marker-fill {
    background-color: hsl(107, 74%, 29%);
    width: 3px;
    height: 100%;
    box-shadow: inset 0px -1px 0px 0px hsl(0, 0%, 100%);
}

.last_message .unread-marker-fill {
    box-shadow: none;
}

.unread .unread_marker {
    @include prefixed-transition(all, 0.3s, ease-out);
    opacity: 1;
}

.unread_marker.slow_fade {
    @include prefixed-transition(all, 2s, ease-out);
}

.unread_marker.fast_fade {
    @include prefixed-transition(all, 0.3s, ease-out);
}

.selected_message .messagebox {
    z-index: 1;
}

.selected_message .messagebox-content {
    box-shadow:
        inset 0px 0px 0px 2px hsl(215, 47%, 50%),
        -1px -1px 0px 0px hsl(215, 47%, 50%),
        1px 1px 0px 0px hsl(215, 47%, 50%),
        -1px 1px 0px 0px hsl(215, 47%, 50%),
        1px -1px 0px 0px hsl(215, 47%, 50%);
}

.message_sender {
    height: 0px;
    vertical-align: top;
    position: relative;
}
/* ... */

